<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Message Blocker</string>
    <string name="button_home_setting">Settings</string>
    <string name="action_settingsaction_settings">Settings</string>
    <string name="button_home_message">Messages</string>
    <string name="button_home_backList">Black List</string>
    <string name="button_home_scan">Scan</string>
    <string name="button_home_schedule">Schedule Messages</string>
    <string name="button_home_about">About</string>
    <string name="title_activity_messages">Spam Messages</string>
    <string name="action_settings">Settings</string>
    <string name="home_title">Message Block</string>
    <string name="version">Version</string>
    <string name="home_category">CATEGORY</string>
    <string name="setting_allow_delete_message">Auto delete messages</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="setting_show_all_message">Show all messages</string>
    <string name="setting_filters_settings_content">Filter keyword settings</string>
    <string name="setting_enable_filter_by_phone">Block by phones</string>
    <string name="setting_enable_filter_by_content">Block by message content</string>
    <string name="setting_on">On</string>
    <string name="setting_off">Off</string>
    <string name="setting_filters_auto_phone">Phone</string>
    <string name="setting_filters_auto_email">Email</string>
    <string name="setting_filters_auto_number">Number</string>
    <string name="setting_filters_content_auto_by">Auto block with</string>
    <string name="setting_filters_settings_phone">Phone number filter settings</string>
    <string name="title_activity_content_filter">ContentFilterActivity</string>
    <string name="setting_filters_content_title">Keyword list</string>
    <string name="setting_filters_phone_title">Blocked phone list</string>
    <string name="title_activity_phone_filter">PhoneFilterActivity</string>
    <string name="setting_prompt_title">Add phone number</string>
    <string name="setting_prompt_type">Input phone number</string>
    <string name="setting_prompt_content_type">Input keyword</string>
    <string name="setting_prompt_content_input_title">Messages will be blocked if contains:</string>
    <string name="setting_filter_settings">Add keyword</string>
    <string name="setting_filter_type">Block by</string>
    <string name="setting_filter_auto">Auto</string>
    <string name="setting_filter_manual">Manual</string>
    <string name="setting_filter_select_your_pattern">Select auto keyword:</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="message_toast_require_input">Phone number is required</string>
    <string name="message_toast_phone_existed">Phone number is already existed</string>
    <string name="message_toast_content_existed">Keyword is already existed</string>
    <string name="message_toast_content_auto_required">You need select auto keyword</string>
    <string name="message_toast_content_manual_required">You must input keyword</string>
    <string name="message_toast_filter_blocked">Blocked</string>
    <string name="message_toast_filter_deleted">Deleted</string>
    <string name="message_toast_comming_soon">This feature will be in the next version</string>
    <string name="message_toast_scan_not_enable_filter">You must turn on message filter feature</string>
    <string name="scan_completed_title">Scanned {0} / {1} messages</string>
    <string name="scan_inprogress_title">Scanning</string>
    <string name="scan_completed_dialog_title">Scan completed</string>
    <string name="scan_completed_dialog_content">Your messages in good state!</string>

    <!-- Toolbar -->
    <string name="toolbar_search_title">Search</string>
    <string name="navigator_item_inbox">Inbox</string>
    <string name="navigator_item_spam_message">Spam messages</string>
    <string name="navigator_item_filter">Filter rules</string>
    <string name="navigator_item_setting">Settings</string>
    <string name="navigator_item_my_photo_title">Take your photo</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    
    <!-- Notifications -->
    <string name="notification_schedule_title">Auto send</string>
    <string name="notification_new_messates_title">New messages</string>
    <string name="notification_new_messates_content">You have {0} new messages</string>

    <!-- About -->
    <string name="about_content">Smart message application, take care your life! \nBlock messages with message content and phone number. Smart schedule messages, just set date and time the application will send messages for you.</string>
    <string name="about_rate_unable_start">Unable to find market app</string>
    
    <!-- Message schedules -->
    <string name="message_schedule_list_title">Message Schedules</string>
    <string name="message_schedule_destination_title">Destination addresses:</string>
    <string name="message_schedule_send_on_date_title">Send on date:</string>
    <string name="message_schedule_message_title">Message content:</string>
    <string name="message_schedule_button_set_date">Set date</string>
    <string name="message_schedule_button_set_time">Set time</string>
    <string name="message_schedule_datetime_value">Please set your date and time!</string>
    <string name="message_schedule_created_date_row_title">Created date</string>
    <string name="message_schedule_send_on_date_row_title">Will send on</string>
    <string name="message_schedule_send_on_date_less_than_current">The date must be greate than the current date!</string>

    <!-- Add contact recipients -->
    <string name="add_recipients_contact_search_hint">Enter name or number</string>

    <!-- Rate app -->
    <string name="rate_app_dialog_title">Rate this app</string>
    <string name="rate_app_dialog_content">If you enjoy this app, please take a moment to rate this app. It will not take more than a minute. Thank You for your support!</string>
    <string name="rate_app_dialog_rate_positive">Rate now</string>
    <string name="rate_app_dialog_rate_remind_later">Remind later</string>
    <string name="rate_app_dialog_rate_never_later">No, thanks</string>

    <!-- Compose messages -->
    <string name="compose_message_button_send">Send</string>
    <string name="compose_message_input_hint">Type your input here</string>
    <string name="compose_message_send_required">Message is cannot be empty</string>
    <string name="compose_message_send_recipents_required">Recipients cannot be empty</string>
    <string name="compose_message_sending">Sending</string>
    <string name="compose_message_failed">Failed</string>
    <string name="compose_message_sent">Sent</string>
    <string name="compose_message_delivered">Delivered</string>
    <string name="compose_message_new_title">Write new</string>
    <string name="compose_message_new_send_to">Send to:</string>
    <string name="compose_message_status_sending">Sending</string>
    <string name="compose_message_status_completed">Delivered</string>
    <string name="compose_message_status_falied">Sent failed</string>

    <!-- Comfirm dialog defalt app -->
    <string name="comfirm_default_app_dialog_title">Change message app</string>
    <string name="comfirm_default_app_dialog_content">Use Message Blocker instead of Messaging as your SMS app?</string>

    <!-- App is not compatible -->
    <string name="app_not_compatible_dialog_title">Message Blocker compatibility</string>
    <string name="app_not_compatible_dialog_content">Sorry, Our application is not compatible with your device!</string>
    <string name="app_not_compatible_comfirm_default">In order for this app works in your devices, please change Message Blocker to default SMS app \n Go settings -&gt; Wireless &amp; Networkd (More) -&gt; Default Sms app</string>

    <!-- Conversation -->
    <string name="conversation_snnipet_empty">The conversation content is empty</string>

    <!-- Context menu -->
    <string name="context_item_delete">Delete</string>
    <string name="context_item_block">Block this person</string>
    <string name="context_item_unspam">Remove spam mark</string>
    <string name="context_item_forward">Forward</string>
    <string name="context_item_resend">Resend</string>
    <string name="context_menu_title">Select a choose</string>

    <!-- Preferences settings -->
    <string name="setting_pre_delete_message">message_block_delete</string>
    <string name="setting_pre_show_all_message">message_block_show_all</string>
    <string name="setting_pre_enable_phone_filter">message_block_phone_enable</string>
    <string name="setting_pre_enable_content_filter">message_block_content_enable</string>
    <string name="setting_pre_show_content_filters">message_block_content_filters</string>
    <string name="setting_pre_show_phone_filters">message_block_phone_filters</string>
    <string name="title_activity_add_filter">AddFilterActivity</string>
    <string name="setting_pre_phone_regex">===SYSTEM_PHONE_REGEX===</string>
    <string name="setting_pre_email_regex">===SYSTEM_EMAIL_REGEX===</string>

    <!-- Advert -->
    <string name="ad_unit_id">ca-app-pub-4706560043728518/2896591982</string>
    <string name="title_activity_scan_completed">ScanCompletedActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_compose_sms">ComposeSmsActivity</string>
    <string name="title_activity_contact_select">ContactSelectActivity</string>
    <string name="title_activity_message_event">MessageEventActivity</string>
    <string name="title_activity_create_schedule_message">Create schedule</string>

</resources>