<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txtContentDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/prompt_title_color"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/setting_filter_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/home_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvFilterBy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtContentDialogTitle"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting_filter_type" />

    <RadioGroup
        android:id="@+id/rdgFilterType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFilterBy"
        android:orientation="horizontal"
        android:paddingTop="10dp" >

        <RadioButton
            android:id="@+id/rdbFilterAuto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_filter_auto" />

        <RadioButton
            android:id="@+id/rdbFilterManual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_filter_manual" />
    </RadioGroup>

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/rdgFilterType"
        android:layout_marginTop="10dp"
        android:background="@drawable/line_green" />

    <TextView
        android:id="@+id/tvSelectYourPattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/line1"
        android:text="@string/setting_filter_select_your_pattern" />

    <Spinner
        android:id="@+id/spFilterType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/tvSelectYourPattern" />

    <TextView
        android:id="@+id/tvContentManualTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spFilterType"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/setting_prompt_content_input_title" />
    
    <EditText
        android:id="@+id/etContentInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvContentManualTitle"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/setting_prompt_content_type"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnContentSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etContentInput"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/btnContentCancel"
        android:text="@string/button_save" />

    <Button
        android:id="@+id/btnContentCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etContentInput"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        android:text="@string/button_cancel" />

</RelativeLayout>