<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TextView
        android:id="@+id/txtDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/prompt_title_color"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/setting_prompt_title"
        android:textColor="@color/white"
        android:textSize="@dimen/home_text_size"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etUserInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtDialogTitle"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="16dp"
        android:hint="@string/setting_prompt_type"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnInputOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserInput"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_toLeftOf="@+id/btnInputCancel"
        android:text="@string/button_ok" />

    <Button
        android:id="@+id/btnInputCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etUserInput"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:text="@string/button_cancel" />

</RelativeLayout>