<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.tsoft.messenger.CreateScheduleMessageActivity" >

    <TextView
        android:id="@+id/txtScheduleDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/prompt_title_color"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/title_activity_create_schedule_message"
        android:textColor="@color/white"
        android:textSize="@dimen/home_text_size"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tvScheduleDestinationsAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginTop="20dp"
                android:paddingLeft="3dp"
                android:text="@string/message_schedule_destination_title" />

            <FrameLayout
                android:id="@+id/layoutScheduleSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvScheduleDestinationsAdd"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginTop="5dp" >

                <com.tsoft.control.ContactsCompletionView
                    android:id="@+id/etScheduleSearchContact"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/add_recipients_contact_search_hint"
                    android:inputType="textAutoComplete"
                    android:maxLength="2000"
                    android:maxLines="8"
                    android:textColor="@color/black"
                    android:textCursorDrawable="@null"
                    android:textSize="@dimen/edit_text_size" />

                <Button
                    android:layout_width="21dp"
                    android:layout_height="21dp"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/search" />

                <ProgressBar
                    android:id="@+id/pb_loading_indicator"
                    style="?android:attr/progressBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|right"
                    android:layout_marginRight="33dp"
                    android:visibility="gone" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvScheduleSendOnDateAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutScheduleSearch"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginTop="20dp"
                android:paddingLeft="3dp"
                android:text="@string/message_schedule_send_on_date_title" />

            <Button
                android:id="@+id/btnScheduleSetDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvScheduleSendOnDateAdd"
                android:layout_marginLeft="@dimen/activity_padding"
                android:text="@string/message_schedule_button_set_date"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnScheduleSetTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvScheduleSendOnDateAdd"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/btnScheduleSetDate"
                android:text="@string/message_schedule_button_set_time"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/line2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/btnScheduleSetDate"
                android:layout_marginTop="10dp"
                android:background="@drawable/line_green" />

            <TextView
                android:id="@+id/tvMessageScheduleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/line2"
                android:layout_marginLeft="@dimen/activity_padding"
                android:layout_marginTop="20dp"
                android:text="@string/message_schedule_message_title" />

            <EditText
                android:id="@+id/etMessageScheduleContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMessageScheduleTitle"
                android:layout_marginLeft="@dimen/activity_padding"
                android:hint="@string/compose_message_input_hint"
                android:maxLength="2000"
                android:maxLines="10"
                android:textColor="@color/text_msg_input"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/edit_text_size" />

            <Button
                android:id="@+id/btnScheduleSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etMessageScheduleContent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/btnScheduleCancel"
                android:text="@string/button_save"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btnScheduleCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/etMessageScheduleContent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="5dp"
                android:text="@string/button_cancel"
                android:textColor="@color/white" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>