<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context="com.tsoft.messenger.ContactSelectActivity" >

    <FrameLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/etSearchContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_recipients_contact_search_hint"
            android:textColor="@color/text_msg_input"
            android:textColorHint="@color/text_msg_input" />

        <Button
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_gravity="center_vertical|right"
            android:layout_marginRight="10dp"
            android:background="@drawable/search" />
    </FrameLayout>

    <ListView
        android:id="@+id/lvContactList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@+id/layoutSearch"
        android:layout_marginTop="10dp"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp"
        android:listSelector="@drawable/list_row_selector" />

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lvContactList"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" 
        android:visibility="gone">

        <Button
            android:id="@+id/btnContactCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_cancel" />

        <Button
            android:id="@+id/btnContactOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@+id/btnCancel"
            android:text="@string/button_ok" />
    </LinearLayout>

</RelativeLayout>